# slack-utils

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
resources/: dist-README.md  sample-server-config.toml
scripts/: dist.sh  foc-md-formatter.py  format-links.py  run-duckdb-sample-queries.sh  server-smoke-test.sh  smoke-test.sh  start-local-archive-server.sh
src/: app.rs  archive_server.rs  cli.rs  commands.rs  duckdb_query.rs  error.rs  formatter.rs  index.rs  input.rs  lib.rs  main.rs  markdown.rs  md_to_html.rs  meilisearch.rs  parquet.rs  settings.rs  slack.rs  widgets.rs
src/slack_render/: markdown.rs  mod.rs  references.rs  visitor.rs
src/ui/: archive_range.rs  channel_list.rs  download_attachments.rs  edit_conversations.rs  export_conversations.rs  export_conversations_week.rs  export_emojis.rs  export_index.rs  export_simple.rs  import_meilisearch.rs  loading.rs  main_menu.rs  markdown_export.rs  md_to_html.rs  mod.rs  query_meilisearch.rs  types.rs
tools/slack-archive-client/: README.md  justfile  package.json  tsconfig.json
tools/slack-archive-client/examples/: index.html
tools/slack-archive-client/scripts/: serve-with-server.sh
tools/slack-archive-client/src/: client.ts  duckdb-client.ts  index.ts  types.ts
tools/slack-archive-client/src/cache/: caching-fetch.ts  index.ts  indexeddb-cache.ts  types.ts
tools/web-duckdb-wasm/: README.md  app.js  index.html  justfile  package.json  serve.js  static-app.js  static-file-server.js  static-files.html  style.css
tools/web-duckdb-wasm/scripts/: export-static-ui.sh  serve-with-server.sh
