[package]
name = "slack-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.30.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slack-blocks-render = "0.4.2"
slack-morphism = { version = "2.17.0", features = ["hyper"] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.9.10"
walkdir = "2.5.0"
webpage = "2.0.1"
