[package]
name = "slack-utils"
version = "0.1.0"
edition = "2024"
default-run = "slack-utils"

[[bin]]
name = "slack-utils"
path = "src/main.rs"

[[bin]]
name = "slack-utils-duckdb"
path = "src/bin/slack-utils-duckdb.rs"
required-features = ["duckdb"]

[[bin]]
name = "slack-archive-server"
path = "src/bin/slack-archive-server.rs"
required-features = ["server"]

[features]
default = []
duckdb = ["dep:duckdb"]
server = ["dep:axum", "dep:axum-extra", "dep:tower-http", "dep:tokio-util", "dep:tower"]

[dependencies]
arrow = "57"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29"
meilisearch-sdk = "0.32.0"
parquet = "57.1.0"
ratatui = "0.30.0"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slack-blocks-render = "0.4.2"
slack-morphism = { version = "2.17.0", features = ["hyper"] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.9.10"
uuid = { version = "1.17", features = ["v4"] }
walkdir = "2.5.0"
webpage = "2.0.1"

# Optional dependencies (feature-gated)
duckdb = { version = "1.1", optional = true, features = ["bundled"] }
axum = { version = "0.8.8", optional = true, features = ["http2"] }
axum-extra = { version = "0.12.5", optional = true, features = ["typed-header"] }
tower-http = { version = "0.6.8", optional = true, features = ["fs", "trace"] }
tokio-util = { version = "0.7", optional = true, features = ["io"] }
tower = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3.24.0"
