[package]
name = "slack-utils"
version = "0.1.0"
edition = "2024"
default-run = "slack-utils"

[[bin]]
name = "slack-utils"
path = "src/main.rs"
required-features = ["tui"]

[[bin]]
name = "slack-utils-duckdb"
path = "src/bin/slack-utils-duckdb.rs"
required-features = ["duckdb"]

[[bin]]
name = "slack-archive-server"
path = "src/bin/slack-archive-server.rs"
required-features = ["server"]

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]
duckdb = ["dep:duckdb"]
server = [
  "dep:axum",
  "dep:axum-extra",
  "dep:tower-http",
  "dep:tokio-util",
  "dep:tower",
]

[dependencies]
arrow = "57.3"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
meilisearch-sdk = "0.32"
parquet = "57.2"
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
  "json",
  "rustls",
] }
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slack-morphism = { version = "2.17", features = ["hyper"] }
despatma = "0.3"
emojis = "0.8"
url = "2.5"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = "1.0"
uuid = { version = "1.20", features = ["v4"] }
walkdir = "2.5"
webpage = "2.0"
markdown = "1.0"

# Optional dependencies (feature-gated)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
duckdb = { version = "1.4", optional = true, features = ["bundled"] }
axum = { version = "0.8", optional = true, features = ["http2"] }
axum-extra = { version = "0.12", optional = true, features = ["typed-header"] }
tower-http = { version = "0.6", optional = true, features = ["fs", "trace"] }
tokio-util = { version = "0.7", optional = true, features = ["io"] }
tower = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3.24"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unwrap_in_result = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "warn"
